[package]
name = "blog_os"
version = "0.1.0"
authors = ["Author Name : Gabriele Toffanin"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.bootimage]
test-timeout = 300
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none"
] #QEMU supports isa for hard-exit
test-success-exit-code = 33  

[dependencies]
bootloader = "0.9"
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[[test]]
name = "should_panic"
harness = false

# Passing from bare metal requires 
# cargo build --target thumbv7em-none-eabihf

# Or by using C linker as
# cargo rustc -- -C link-args="/ENTRY:_start /SUBSYSTEM:console"